--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/faviconGOT.png" type="image/x-icon">
   <script src="ts/index.ts" type="module"></script>
+  <link rel="stylesheet" href="/src/css/styles.css">
   <title>GoT DOM</title>
 </head>
 
 <body>
-
+  <div class="app"></div>
 </body>
 
 </html>
